# schemabridge

./: .gitignore  .npmignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
.husky/: commit-msg  pre-commit
.vercel/: project.json
.vercel/output/: config.json
.vercel/output/_functions/: _@astrojs-ssr-adapter.mjs  _astro-internal_middleware.mjs  entry.mjs  manifest_DALYaeRZ.mjs  renderers.mjs
.vercel/output/_functions/chunks/: Code_BUBlebyv.mjs  _@astrojs-ssr-adapter_ClIKp9ZZ.mjs  _astro_assets_DAHu-JfE.mjs  angular-html_BJPKUVWr.mjs  angular-ts_BLkjFCrr.mjs  apex_CBz2L4KK.mjs  api_Cu31Zl9a.mjs  beancount_D5Viq-xB.mjs  berry_Cl4ZUvQZ.mjs  bicep_BkgsnHK9.mjs  cadence_CsQXjOho.mjs  cli_zew4G81o.mjs  cobol_DhVSjce_.mjs  coffee_BLYCzgtY.mjs  common_DZ5x7B5l.mjs  config_C4UOEcZs.mjs  content-assets_XF2L4Pog.mjs  content-modules_B8nV_xZU.mjs  crystal_BnbbBESa.mjs  csharp_CjfygdPt.mjs  elixir_CjvU0Tlq.mjs  engine-oniguruma_CMZzaWFA.mjs  fish_Pi1OqB6M.mjs  folder-conversion_B20vyrdz.mjs  gdresource_DtbMpJOv.mjs  gdscript_CjbEYcq_.mjs  getting-started_2CxpyJdV.mjs  (+41 more)
.vercel/output/diagnostics/: cli_traces.json
.vercel/output/static/: index.html
docs/: api.md  cli.md  folder-conversion.md  getting-started.md  index.md  limitations.md  package-size.md  roadmap.md  use-cases.md
docs/.vitepress/: config.ts
examples/source/common/: enums.ts
examples/source/users/: user.ts
internal-docs/: PUBLISHING.md
python/: README.md  pyproject.toml
python/schemabridge/: __init__.py  cli.py
scripts/: set-version.js  sync-vercel-output.mjs  test-bundled-cli-examples.js
src/: index.ts
src/cli/: index.ts
src/core/ast/: index.ts  zod-visitor.ts
src/core/emitters/: pydantic.ts  typescript.ts
src/core/loader/: folder-converter.ts  index.ts
src/utils/: typescript-validator.ts
tests/fixtures/: api-request-schema.ts  config-schema.ts  enriched-transaction.ts  event-schema.ts
tests/integration/: fixtures.test.ts
tests/snapshots/: code-generation.test.ts
tests/snapshots/__snapshots__/: code-generation.test.ts.snap
tests/unit/: bundled-cli.test.ts  cli.test.ts  loader.test.ts  pydantic-emitter.test.ts  typescript-emitter.test.ts  zod-visitor.test.ts
tests/unit/__snapshots__/: typescript-emitter.test.ts.snap
(+14 files in other folders)
